Implement API to add product variation for seller